// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ProductCard] devería retornar del count deveria aumentar 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`[ProductCard] devería retornar el componente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
